Standardize API response for exit code return